--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,36 @@
-name: Continuous Integration
+name: CI
 
 on:
+  workflow_dispatch:
   push:
-      branches: [ main, develop ]
+    branches: [ main ]
+    tags: [ v* ]
   pull_request:
-      branches: [ main, develop ]
 
 jobs:
-  run-tests:
+  validate:
     runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
         php: [ "8.1", "8.2", "8.3" ]
         composer_flags: [ "", "--prefer-lowest" ]
-    name: PHP ${{ matrix.php }} ${{ matrix.composer_flags}}
+    name: 'Build & validate: PHP ${{ matrix.php }} ${{ matrix.composer_flags}}'
     env:
-      PHP: ${{ matrix.os }}
+      PHP: ${{ matrix.php }}
       COMPOSER_MEMORY_LIMIT: -1
       COMPOSER_FLAGS: ${{ matrix.composer_flags }}
       PHP_VERSION: ${{ matrix.php }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Install PHP
         uses: shivammathur/setup-php@v2
         with:
-            php-version: ${{ matrix.php }}
-            extensions: xdebug, zip
+          php-version: ${{ matrix.php }}
+          extensions: xdebug, zip
       - name: Install dependencies
         run: composer update --prefer-dist --no-interaction $COMPOSER_FLAGS
       - name: Static analysis with PHPStan
@@ -36,3 +39,7 @@ jobs:
         run: composer checkstyle
       - name: Execute tests (Unit and Feature)
         run: composer test
+      - name: Run SonarCloud scanner
+        uses: minvws/nl-irealisatie-generic-pipelines/.github/actions/sonarcloud@main
+        with:
+          sonar-token: ${{ secrets.SONAR_TOKEN }}
