--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,8 +14,8 @@ sonar.sources=src
 sonar.tests=tests
 
 # Code coverage
-sonar.php.tests.reportPath=reports/report-phpunit.xml
-sonar.php.coverage.reportPaths=reports/coverage-phpunit.xml
+sonar.php.tests.reportPath=report-phpunit.xml
+sonar.php.coverage.reportPaths=coverage-phpunit.xml
 
 # Additional reports
-sonar.php.phpstan.reportPaths=reports/phpstan.json
+sonar.php.phpstan.reportPaths=phpstan.json
