--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "logging"
     ],
     "type": "library",
-    "license": "EUPL",
+    "license": "EUPL-1.2",
     "require": {
         "php": "^8.1",
         "nesbot/carbon": "^2.70 | ^3.0",
@@ -63,17 +63,10 @@
         "update-test-snapshots": "Update PHPUnit snapshots",
         "checkall": "Run all checks including test"
     },
-    "extra": {
-        "branch-alias": {
-            "dev-main": "1.0-dev"
-        }
-    },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
